# misc

./: .pre-commit-config.yaml  native_sram.sv  pyproject.toml
buff_stack/: main.cpp
flash_attention/: .gitignore  CMakeLists.txt  flash_attention.cpp  flash_attention.cu  flash_attention.py  pyproject.toml
hello_rdma/: .gitignore  main.tf  pyproject.toml  variables.tf
hello_rdma/ansible/: ansible.cfg  inventory.gcp.yaml  playbook.yaml
hello_rdma/ansible/group_vars/: rdma_testers.yaml
hello_rdma/ansible/templates/: roce-rxe.service.j2
hello_rdma/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
hello_tofu/: provider.tf
insertion_sort/: CMakeLists.txt  main.cpp
kubernetes_testing/gcp/: .envrc.example  .gitignore  app.yaml  pyproject.toml
kubernetes_testing/gcp/ansible/: debug-vars.yaml  init-master.yaml  inventory.gcp.yaml  join-workers.yaml  setup-os.yaml
kubernetes_testing/gcp/terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
kubernetes_testing/kind/: kind-config.yaml
linked_list_stack/: main.cpp
lru_cache/: CMakeLists.txt  main.cpp
merge_sort/: CMakeLists.txt  main.cpp
mlir_test/: main.py  pyproject.toml  simple_model.py
mpmc_ring_buffer/: main.cpp
mxu/: .gitignore  ARCHITECTURE.md  BUILD.bazel  MODULE.bazel  README.md  main.py  pe_rand_load.fst  pyproject.toml  requirements_lock.txt  sim_main.cpp  systolic_array_rand_matmul_test.fst  waveform.fst
mxu/hw/interfaces/: sram_if.sv
mxu/hw/rtl/compute/: BUILD.bazel  README.md  pe.sv  run_pytest.py  systolic_array.sv  test_pe.cpp  test_pe.py  test_systolic_array.cpp  test_systolic_array.py
mxu/hw/rtl/control/: BUILD.bazel  compute_fsm.sv  load_fsm.sv  load_unit_tb_top.sv  test_load_fsm.cpp  test_load_unit_tb_top.cpp
mxu/hw/rtl/dataflow/: deskew.sv  skew.sv
mxu/hw/rtl/memory/: BUILD.bazel  flip_flop_sram.sv  test_flip_flop_sram.cpp
mxu/hw/shared/: BUILD.bazel  verilator_pins.h  verilator_test_fixture.h
obj_pool/: main.cpp
ooo_cpu/: README.md
spsc_ringbuffer/: CMakeLists.txt  main.cpp
systolic_array/: .gitignore  systolic_array_teroshdl.yaml
systolic_array/hw/rtl/compute/: systolic_array.sv
systolic_array/hw/rtl/control/: load_fsm.sv
task_scheduler/: main.cpp
vivado_hello_world/: .gitignore  system_wrapper.xsa  vivado_hello_world.xpr
vivado_hello_world/hello_world/: vitis-comp.json
vivado_hello_world/hello_world/src/: app.yaml  compile_commands.json  helloworld.c  platform.c  platform.h
vivado_hello_world/vivado_hello_world.srcs/constrs_1/new/: physical_pins.xdc
vivado_hello_world/vivado_hello_world.srcs/sources_1/bd/system/: system.bd
vivado_hello_world/vivado_hello_world.srcs/sources_1/bd/system/ip/system_blink_module_0_0/: system_blink_module_0_0.xci
vivado_hello_world/vivado_hello_world.srcs/sources_1/bd/system/ip/system_processing_system7_0_0/: system_processing_system7_0_0.xci
vivado_hello_world/vivado_hello_world.srcs/sources_1/bd/system/ui/: bd_c954508f.ui
vivado_hello_world/vivado_hello_world.srcs/sources_1/new/: blink_module.v
