load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_verilator//verilog:defs.bzl", "verilog_library")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

verilog_library(
    name = "systolic_array_rtl",
    srcs = [
        "pe.sv",
        "systolic_array.sv",
    ],
)

verilator_cc_library(
    name = "systolic_array_verilated",
    module = ":systolic_array_rtl",
    module_top = "systolic_array",
    vopts = ["-Wall"],
)

cc_binary(
    name = "simulate",
    srcs = ["sim_main.cpp"],
    deps = [":systolic_array_verilated"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//:simulate": "",
    },
)
