module(
    name = "mxu",
    version = "0.1.0",
)

# ==========================================
# C++ Rules (Required for Verilator outputs)
# ==========================================
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "eigen", version = "5.0.1.bcr.1")


# ==========================================
# Python & UV Integration
# ==========================================
bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# ==========================================
# Hardware Rules (Modern Verilator Toolchain)
# ==========================================
bazel_dep(name = "rules_verilator", version = "0.2.0")
bazel_dep(name = "verilator", version = "5.046.bcr.3")

register_toolchains("//hw/shared:verilator_toolchain")
