load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilator//verilog:defs.bzl", "verilog_library")

verilog_library(
    name = "systolic_sv",
    srcs = [
        "pe.sv",
        "systolic_array.sv",
    ],
)

verilator_cc_library(
    name = "pe_cc",
    module = ":systolic_sv",
    module_top = "pe",
    vopts = [
        "--trace-fst",
        "--trace-structs",
    ],
)

cc_test(
    name = "test_pe",
    size = "small",
    srcs = ["test_pe.cpp"],
    copts = ["-std=c++17"],
    deps = [
        ":pe_cc",
        "//hw/shared:verilator_pins",
        "//hw/shared:verilator_test_fixture",
        "@eigen",
        "@googletest//:gtest_main",
    ],
)

# BAZEL MAGIC: Automatically stamp out tests for 3x3, 4x4, and 8x8 arrays!
[
    (
        verilator_cc_library(
            name = "systolic_cc_size_{}".format(size),
            module = ":systolic_sv",
            module_top = "systolic_array",
            # Pass the parameter directly to Verilator
            vopts = [
                "-GSIZE={}".format(size),
                "--trace-fst",
                "--trace-structs",
            ],
        ),
        cc_test(
            name = "test_systolic_size_{}".format(size),
            size = "small",
            srcs = ["test_systolic_array.cpp"],
            # Inject the SIZE macro into the C++ compiler so the test knows the size!
            copts = [
                "-DSIZE={}".format(size),
                "-std=c++17",
            ],
            deps = [
                ":systolic_cc_size_{}".format(size),
                "//hw/shared:verilator_pins",
                "//hw/shared:verilator_test_fixture",
                "@eigen",  # Bring in the Eigen matrix library
                "@googletest//:gtest_main",
            ],
        ),
    )
    for size in [
        3,
        4,
        8,
    ]  # Add any sizes you want to test here!
]
